--- a/systests/webapps/simpleWebapp/pom.xml
+++ b/systests/webapps/simpleWebapp/pom.xml
@@ -50,12 +50,17 @@
             <groupId>org.apache.commons</groupId>
             <artifactId>commons-lang3</artifactId>
             <version>${commons.lang.version}</version>
-        </dependency>  
+        </dependency>
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-text</artifactId>
+            <version>${commons.text.version}</version>
+        </dependency>
         <dependency>
            <groupId>org.apache.cxf</groupId>
            <artifactId>cxf-rt-frontend-jaxrs</artifactId>
            <version>${cxf.version}</version>
-        </dependency>    
+        </dependency>
     </dependencies>
     <build>
         <!-- Name of the generated WAR file -->
