--- a/examples/jaxrsCxfPluginWebapp/pom.xml
+++ b/examples/jaxrsCxfPluginWebapp/pom.xml
@@ -26,7 +26,7 @@
     </parent>
     <groupId>org.apache.cxf.fediz.examples</groupId>
     <artifactId>jaxrsCxfPluginWebapp</artifactId>
-    <name>Fediz Example: SpringWebapp</name>
+    <name>Fediz Example: SpringWebapp (CXF Plugin)</name>
     <packaging>war</packaging>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
