--- a/examples/wsclientWebapp/webservice/common/pom.xml
+++ b/examples/wsclientWebapp/webservice/common/pom.xml
@@ -30,6 +30,11 @@
     <packaging>jar</packaging>
 
     <dependencies>
+        <dependency>
+            <groupId>org.apache.geronimo.specs</groupId>
+            <artifactId>geronimo-ws-metadata_2.0_spec</artifactId>
+            <version>1.1.3</version>
+        </dependency>
     </dependencies>
     <build>
         <plugins>
