--- a/pom.xml
+++ b/pom.xml
@@ -53,6 +53,7 @@
         <hsqldb.version>2.5.0</hsqldb.version>
         <htmlunit.version>2.27</htmlunit.version>
         <jackson.version>2.9.9</jackson.version>
+        <jackson.databind.version>2.9.9.3</jackson.databind.version>
         <javassist.version>3.19.0-GA</javassist.version>
         <javax.el.version>3.0.0</javax.el.version>
         <javax.validation.version>2.0.1.Final</javax.validation.version>
