--- a/plugins/websphere/pom.xml
+++ b/plugins/websphere/pom.xml
@@ -35,10 +35,7 @@
         <dependency>
             <groupId>javax.servlet</groupId>
             <artifactId>javax.servlet-api</artifactId>
-            <!--<version>${servlet.version}</version>-->
-            <version>3.1.0</version>
-            <!--<type>jar</type>-->
-            <!--<scope>compile</scope>-->
+            <version>${servlet.version}</version>
         </dependency>
         <dependency>
             <groupId>org.apache.cxf.fediz</groupId>
