--- a/systests/jetty9/pom.xml
+++ b/systests/jetty9/pom.xml
@@ -29,11 +29,6 @@
     <artifactId>fediz-systests-jetty9</artifactId>
     <name>Apache Fediz Systests for Jetty 9</name>
     <packaging>jar</packaging>
-    <properties>
-        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-        <tomcat8.version>8.5.45</tomcat8.version>
-    </properties>
     <dependencies>
         <dependency>
             <groupId>org.eclipse.jetty</groupId>
@@ -92,13 +87,20 @@
         <dependency>
             <groupId>org.apache.tomcat.embed</groupId>
             <artifactId>tomcat-embed-core</artifactId>
-            <version>${tomcat8.version}</version>
+            <version>${tomcat.version}</version>
             <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>org.apache.tomcat.embed</groupId>
             <artifactId>tomcat-embed-jasper</artifactId>
-            <version>${tomcat8.version}</version>
+            <version>${tomcat.version}</version>
+            <scope>test</scope>
+        </dependency>
+        <!-- Tomcat 9.x implements the Servlet 4.0 -->
+        <dependency>
+            <groupId>javax.servlet</groupId>
+            <artifactId>javax.servlet-api</artifactId>
+            <version>${servlet.version}</version>
             <scope>test</scope>
         </dependency>
          <dependency>
